@@ -1,3 +1,8 @@
+* fix the text processing of the options in src/grg_prefs_io.c:
+    - more robust checking for if a character is a digit.
+    - check for '\0' character.
+    - 
+
 -- 1.3 --
 
 * in next FILE SUBFORMAT, comment of attached files shouldn't default to
